Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#11785 closed bug (fixed)

HaikuDepot crashes when installing more then one package

Reported by: andy-kras Owned by: stippi
Priority: normal Milestone: R1/beta1
Component: Applications/HaikuDepot Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

HaikuDepot program on last nightly hrev48717 x86_gcc2_hybrid.

Switch off option "Show->Only featured packages".

Install or uninstall any package.

After that try install or uninstall more packages.

It will be impossiblle due program crash.

Attachments (1)

HaikuDepot-3213-debug-25-01-2015-07-24-13.report (24.4 KB ) - added by andy-kras 10 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by stippi, 10 years ago

Resolution: fixed
Status: newclosed

I could reproduce this in the first session, although I had to install three packages, then I got a very similar backtrace. In hrev48718 I've fixed a very plausible cause. Afterwards, I could not reproduce the problem, but I didn't try very long. If you can still reproduce it, please re-open the ticket.

comment:2 by andy-kras, 10 years ago

After update to hrev48721 HaikuDepot works more faster and whitout crashes.

But I still can't set keyboard focus to package list when option "Only featured packages" is on.

See my next ticket #11794

Best regards, Andy

Note: See TracTickets for help on using tickets.